--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
    <!-- <h1>TOAST <span>NOTIFICATIONS</span></h1> -->
    <div class="btns">
-      <button id="success">success</button>
-      <button id="error">Error</button>
-      <button id="warning">Warning</button>
+      <button id="success">success Notification</button>
+      <button id="error">Error Notification</button>
+      <button id="warning">Warning Notification</button>
    </div>
 
       <div class="success-msg">
